[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Interaction/Button.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Interaction/Prompt.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.819608, 0.266667, 0.266667, 1 )

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.278431, 0.278431, 0.278431, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SphereShape" id=5]
radius = 0.65

[node name="Button" type="Spatial"]
script = ExtResource( 1 )

[node name="mButton" type="MeshInstance" parent="."]
transform = Transform( 0.15, 0, 0, 0, -6.55671e-09, -0.15, 0, 0.15, -6.55671e-09, 0, 0, 0.075 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="mButtonBase" type="MeshInstance" parent="."]
transform = Transform( 0.165, 0, 0, 0, -7.21238e-09, -0.165, 0, 0.165, -7.21238e-09, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.00046 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.35 )
shape = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Prompt" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.494809, 0.265793 )
visible = false
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
